# asteroids

./: AsteroidHunter.py  conftest.py  pyproject.toml
hunter/: AsteroidHunter.py  README.md
tests/: test_asteroid_hunter.py
