[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["MarvinMartin24 <mmartin.mmarvin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = { version = "^2.26.0", extras = [ "security" ] }
pytest = '^6.2.5'
tqdm = '^4.62.3'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
